# Simple-Iscsi

./: .gitignore  CLI.md  Cargo.toml  README.md  clients.toml  config.toml  config.toml.bak  iscsi-server-planning.md  package.json  test.toml
.agents/: rules copy.md  rules.md
.agents/rules/: rules.md  sesiprompt_pembuka.md
isharedisk/: install.bat
isharedisk/driver/: iSharePp.sys
isharedisk/installer ( official )/: uninst.exe.nsis
isharedisk/installer ( official )/$PLUGINSDIR/: mpio.ini
isharedisk/installer ( official )/dfmirage/: dfmirage.PNF
isharedisk/installer ( official )/language/: Arabic.ini  Danish.ini  English.ini  Filipino.ini  French.ini  German.ini  Indonesia.ini  Japanese.ini  Khmer.ini  Korean.ini  Malay.ini  (+8 more)
isharedisk/reg/: HKLM_ISharePnp.reg  SERVICE_ISHAREPNP.reg  readme.txt
pxe/sb-custom/: autoexec.ipxe
sb-custom/ipxefull/: autoexec.ipxe
src/: backend.rs  cache.rs  cli.rs  config.rs  config_manager.rs  fs_utils.rs  main.rs  read_ahead.rs  scsi.rs  scsi_gamedisk.rs  scsi_imagedisk.rs  server.rs  server_api.rs  session.rs  stats.rs  vhd.rs  vhd_merge.rs  writeback_gamedisk.rs  writeback_imagedisk.rs  writeback_super.rs
src/api/: mod.rs  routes_client.rs  routes_disk.rs  routes_stats.rs  routes_tftp.rs  routes_vhd.rs  static_files.rs
src/netboot/: dhcp.rs  dhcp_packet.rs  mod.rs  tftp.rs
src/pdu/: builder.rs  imagedisk.rs  mod.rs  parser.rs
src/session/: login.rs  mod.rs  pdu_io.rs  scsi_handler.rs  scsi_handler_gamedisk.rs  scsi_handler_imagedisk.rs  scsi_image.rs
ui/: index.html  index.js  input.css  style.css  tailwind.css
(+49 files in other folders)
